--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="styles/portfolio.css" />
   </head>
   <body>
+    <!-- header starts -->
     <header>
       <nav>
         <h3 class="nav-title">Ma<span class="text-primary">r</span>y</h3>
@@ -36,7 +37,11 @@
         <img src="images/hardy.png" alt="" class="profile-picture" />
       </div>
     </header>
+    <!-- header ends -->
+
+    <!-- main starts -->
     <main>
+      <!-- about section starts -->
       <section class="about">
         <h3 class="section-title">About Me</h3>
         <p class="section-description">
@@ -46,8 +51,89 @@
           while working with me. Delivering work within time and budget which
           meets clients requirements in our mata.
         </p>
+        <div class="about-info-wrapper">
+          <div class="about-info">
+            <h3 class="info-title section-light-text">Name:</h3>
+            <p class="info-description section-dark-text">Mary Hardy</p>
+          </div>
+
+          <div class="about-info">
+            <h3 class="info-title section-light-text">Email</h3>
+            <p class="info-description section-dark-text">info@gmail.com</p>
+          </div>
+
+          <div class="about-info">
+            <h3 class="info-title section-light-text">Date of birth:</h3>
+            <p class="info-description section-dark-text">11 November 1987</p>
+          </div>
+
+          <div class="about-info">
+            <h3 class="info-title section-light-text">From:</h3>
+            <p class="info-description section-dark-text">Los Angeles, USA</p>
+          </div>
+        </div>
       </section>
+      <!-- about section ends -->
+
+      <!-- what i do section starts -->
+      <section class="what-i-do">
+        <h3 class="section-title">What I do</h3>
+        <p class="section-description">
+          I have more than 10 years experience building software for clients all
+          over the world. Below is a quick overview of my main technical skill
+          sets and technologies i use. Want to find out more about my
+          experience? Check out my online resume and project portfolio.
+        </p>
+
+        <div class="skills-wrapper">
+          <div class="skill">
+            <img src="images/icons/js.png" alt="" />
+            <h3 class="section-dark-text">Vanilla Javascript</h3>
+            <p class="section-light-text">
+              List skill/technologies here. You can change the icon above to any
+              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+              ligula eget dolor.
+            </p>
+          </div>
+
+          <div class="skill">
+            <img src="images/icons/react.png" alt="" />
+            <h3 class="section-dark-text">React</h3>
+            <p class="section-light-text">
+              List skill/technologies here. You can change the icon above to any
+              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+              ligula eget dolor.
+            </p>
+          </div>
+
+          <div class="skill">
+            <img src="images/icons/nodejs.png" alt="" />
+            <h3 class="section-dark-text">Node Js</h3>
+            <p class="section-light-text">
+              List skill/technologies here. You can change the icon above to any
+              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+              ligula eget dolor.
+            </p>
+          </div>
+
+          <div class="skill">
+            <img src="images/icons/mongo.png" alt="" />
+            <h3 class="section-dark-text">MongoDB</h3>
+            <p class="section-light-text">
+              List skill/technologies here. You can change the icon above to any
+              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+              ligula eget dolor.
+            </p>
+          </div>
+        </div>
+      </section>
+
+      <!-- what i do section ends -->
     </main>
+    <!-- main ends -->
+
+    <!-- footer starts -->
     <footer></footer>
+    <!-- footer ends -->
   </body>
 </html>
