--- a/index.html
+++ b/index.html
@@ -128,6 +128,92 @@
         </div>
       </section>
 
+      <!-- resume section -->
+      <section class="resume">
+        <h3 class="section-title">A summary of My Resume</h3>
+        <!-- resume wrapper starts -->
+        <div class="resume-wrapper">
+          <div class="resume-column">
+            <h3 class="resume-column-title">My Education</h3>
+
+            <div class="resume-item">
+              <h3 class="resume-item-title">Master in Computer Engineering</h3>
+              <h4 class="resume-item-institute">
+                Harvard University / 2015 - 2017
+              </h4>
+              <p class="resume-item-description">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+            <hr />
+
+            <div class="resume-item">
+              <h3 class="resume-item-title">Master in Computer Engineering</h3>
+              <h4 class="resume-item-institute">
+                Harvard University / 2015 - 2017
+              </h4>
+              <p class="resume-item-description">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+            <hr />
+
+            <div class="resume-item">
+              <h3 class="resume-item-title">Master in Computer Engineering</h3>
+              <h4 class="resume-item-institute">
+                Harvard University / 2015 - 2017
+              </h4>
+              <p class="resume-item-description">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+          </div>
+
+          <div class="resume-column">
+            <h3 class="resume-column-title">My experience</h3>
+            <div class="resume-item">
+              <h3 class="resume-item-title">Sr. Font End Developer</h3>
+              <h4 class="resume-item-institute">Apple Inc / 2020 - Current</h4>
+              <p class="resume-item-description">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+            <hr />
+
+            <div class="resume-item">
+              <h3 class="resume-item-title">Jr. Font End Developer</h3>
+              <h4 class="resume-item-institute">Dribbble Inc / 2018 - 2022</h4>
+              <p class="resume-item-description">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+            <hr />
+
+            <div class="resume-item">
+              <h3 class="resume-item-title">HTML Developer</h3>
+              <h4 class="resume-item-institute">Adobe Inc / 2017 - 2018</h4>
+              <p class="resume-item-description">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+          </div>
+        </div>
+        <!-- resume wrapper ends -->
+      </section>
+      <!-- resume section ends -->
+
       <!-- what i do section ends -->
     </main>
     <!-- main ends -->
