resume section completed

--- a/index.html
+++ b/index.html
@@ -211,6 +211,8 @@
           </div>
         </div>
         <!-- resume wrapper ends -->
+
+        <button class="btn-primary">Download CV</button>
       </section>
       <!-- resume section ends -->
 
